--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     </div>
                     <span class="sign-up-or-header">-OR-</span>
                     <div id="signup-inputs">
-                        <form action="#">
+                        <form action="#" method="post" name="Sign-Up">
                         <input type="text" name="Name" id="input-1" class="inputs" placeholder="Name" required>
                         <input type="email" name="Email" id="input-2" class="inputs" placeholder="Email" required>
                         <div class="password-container"><input type="password" name="Password" id="input-3"
