--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                             pattern="(?=.*\d)(?=.*[a-zA-Z]).{8,}" class="inputs" placeholder="Password" required><button class="show-container"
                                 id="show-container"><i class="fa-solid fa-eye-slash" id="show"></i></button></div>
                                 <span class="error" id="passwordError"></span>
-                        <button class="sign-up-button">Sign up</button>
+                        <button class="sign-up-button" name="sign-up">Sign up</button>
                         <span class="login-opt">Already have an account? <a href="#" class="login-here">login
                                 here</a></span>
                     </form>
