--- a/index.html
+++ b/index.html
@@ -74,14 +74,14 @@
                     </div>
                     <span class="sign-up-or-header">-OR-</span>
                     <div id="signup-inputs">
-                        <form action="#" method="post" name="Sign-Up">
+                        <form method="POST" name="Sign-Up">
                         <input type="text" name="Name" id="input-1" class="inputs" placeholder="Name" required>
                         <input type="email" name="Email" id="input-2" class="inputs" placeholder="Email" required>
                         <div class="password-container"><input type="password" name="Password" id="input-3"
                             pattern="(?=.*\d)(?=.*[a-zA-Z]).{8,}" class="inputs" placeholder="Password" required><button class="show-container"
                                 id="show-container"><i class="fa-solid fa-eye-slash" id="show"></i></button></div>
                                 <span class="error" id="passwordError"></span>
-                        <button class="sign-up-button" name="sign-up">Sign up</button>
+                       <a><input type="submit" value="Sign Up" name="submit" class="sign-up-button"></a>
                         <span class="login-opt">Already have an account? <a href="#" class="login-here">login
                                 here</a></span>
                     </form>
