--- a/Other pages/thankyou.html
+++ b/Other pages/thankyou.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" media="only screen and (max-width:734px)" href="../style/734.css">
     <link rel="stylesheet" media="only screen and (max-width:602px)" href="../style/602.css">
     <link rel="stylesheet" media="only screen and (max-width:362px)" href="../style/362.css">
-    <title>Sign Up</title>
+    <title>Thank You!!</title>
 </head>
 
 <body>
