social and login page

--- a/Other pages/thankyou.html
+++ b/Other pages/thankyou.html
@@ -30,7 +30,9 @@
                 <h4 class="redicect-text">
                     You will be redirected soon!
                 </h4>
-            </div>
+            </div><div class="counter">
+            <p id="counter"></p>
+        </div>
         </div>
         <div class="penguin-container">
             <div class="left-mountain"></div>
