dark mode added and some debugging

--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
 </head>
 
 <body>
+    <div class="toggle-switch">
+        <label class="switch-label" for="toggleSwitch">
+          <input type="checkbox" class="checkbox" id="toggleSwitch">
+          <span class="slider"></span>
+        </label>
+      </div>  
     <div class="social-container">
         <div class="social-bg" onclick="toggleSocial()">
     <div class="social" id="social">
