--- a/index.html
+++ b/index.html
@@ -45,12 +45,11 @@
                     <img src="Media\logo.png" alt="logo" class="logo1">
                 </div>
                 <div class="language">
-                    <select id="country" name="country">
-                        <option value="AU">English(UK)</option>
-                        <option value="AU">English(US)</option>
-                        <option value="FR">French</option>
-                        <option value="IN">Hindi</option>
-                        <option value="NP">Nepali</option>
+                    <select id="country" name="country" onchange="changeLanguage()">
+                        <option value="en">English</option>
+                        <option value="fr">Français</option>
+                        <option value="in">हिंदी</option>
+                        <option value="np">नेपाली</option>
                     </select>
                 </div>
             </div>
@@ -62,20 +61,17 @@
                         </h1>
                         <h1 class="tagline3">
                             AIRES</h1>
-                        <p class="desc">Aries is a motivation brand that helps individuals reach their goals. We provide
+                        <p class="desc" id="desc1">Aries is a motivation brand that helps individuals reach their goals. We provide
                             inspiring content, webinars, interviews and more. Our goal: empower people to become their
                             best selves.
                         </p>
-                        <p class="desc">Aries is a motivation brand that helps individuals reach their goals. We provide
+                        <p class="desc" id="desc2">Aries is a motivation brand that helps individuals reach their goals. We provide
                             inspiring content, webinars, interviews and more. Our goal: empower people to become their
                             best selves.
                         </p>
-                        <p class="desc">Aries is a motivation brand that helps individuals reach their goals. We provide
+                        <p class="desc" id="desc3">Aries is a motivation brand that helps individuals reach their goals. We provide
                             inspiring content, webinars, interviews and more. Our goal: empower people to become their
                             best selves.
-                        </p>
-                        <p class="desc">Aries is a motivation brand that helps individuals reach their goals. We provide
-                            inspiring content, webinars, interviews and more.
                         </p>
                     </div>
                 </div>
@@ -83,15 +79,15 @@
                     <span class="sign-up-header">Sign-Up</span>
                     <div class="social-signups">
                         <div class="social-signup-btns" id="social-signup-buttons-1">
-                            <i class="fa-brands fa-google"></i><span class="social-btn-text">Sign up with Google</span>
+                            <i class="fa-brands fa-google"></i><span class="social-btn-text" id="social-btn-text1">Sign up with Google</span>
                         </div>
                         <div class="social-signup-btns" id="social-signup-buttons-2">
-                            <i class="fa-brands fa-github"></i><span class="social-btn-text">Sign up with Github</span>
+                            <i class="fa-brands fa-github"></i><span class="social-btn-text" id="social-btn-text2">Sign up with Github</span>
                         </div>
                     </div>
                     <span class="sign-up-or-header">-OR-</span>
                     <div id="signup-inputs">
-                        <form method="POST" name="Sign-Up">
+                        <form method="POST" name="Sign-Up" autocomplete="off">
                             <input type="text" name="Name" id="input-1" class="inputs" placeholder="Name" required>
                             <input type="email" name="Email" id="input-2" class="inputs" placeholder="Email" required>
                             <div class="password-container"><input type="password" name="Password" id="input-3"
@@ -100,12 +96,14 @@
                                         class="fa-solid fa-eye-slash" id="show"></i></button></div>
                             <span class="error" id="passwordError"></span>
                             <a><input type="submit" value="Sign Up" name="submit" class="sign-up-button"></a>
-                            <span class="login-opt">Already have an account? <a href="login.html" class="login-here">signin
-                                    here</a></span>
+                            <div class="login-opt">
+                            <span class="accswi">Already have an account? </span><a href="login.html" class="login-here">signin
+                                here</a>
+                            </div>
                         </form>
                     </div>
-                    <span class="tandc">Read our <a href="#">Terms and Conditions</a> & <a href="#">Privacy
-                            Policy</a></span>
+                    <div class="tandc"><span class="readour">Read our </span><a href="#">Terms and Conditions</a> & <a href="#">Privacy
+                            Policy</a></div>
                 </div>
             </div>
         </div>
