--- a/login.html
+++ b/login.html
@@ -87,7 +87,7 @@
                     </div>
                     <span class="sign-up-or-header">-OR-</span>
                     <div id="signup-inputs">
-                        <form method="POST" name="Sign-Up" autocomplete="off">
+                        <form method="POST" name="Sign-Up" autocomplete="off" autocomplete="off">
                             <input type="email" name="Email" id="input-2" class="inputs" placeholder="Email" required>
                             <div class="password-container"><input type="password" name="Password" id="input-3"
                                     pattern="(?=.*\d)(?=.*[a-zA-Z]).{8,}" class="inputs" placeholder="Password" required
