--- a/index.html
+++ b/index.html
@@ -37,12 +37,10 @@
     <div class="social-container">
         <div class="social-bg" onclick="toggleSocial()">
             <div class="social" id="social">
-                <a href="https://www.linkedin.com/in/aviral-ale-027425262/" target="_blank"><i
-                        class="fa-brands fa-linkedin"></i></a>
-                <a href="https://github.com/dedyspooky" target="_blank"><i class="fa-brands fa-github"></i></a>
-                <a href="https://www.instagram.com/aviral.who_/" target="_blank"><i
-                        class="fa-brands fa-instagram"></i></a>
-                <a href="mailto:aviralale@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
+                <a href="https://www.linkedin.com/in/aviral-ale-027425262/" target="_blank" title="linkedin"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://github.com/dedyspooky" target="_blank" title="github"><i class="fa-brands fa-github"></i></a>
+                <a href="https://www.instagram.com/aviral.who_/" target="_blank" title="instagram"><i class="fa-brands fa-instagram"></i></a>
+                <a href="mailto:aviralale@gmail.com" target="_blank" title="email"><i class="fa-solid fa-envelope"></i></a>
             </div>
             <button class="arrow-container" id="arrow"><i id="arrow-text" class="fa-solid fa-arrow-right"></i></button>
         </div>
