--- a/Other pages/thankyou.html
+++ b/Other pages/thankyou.html
@@ -25,7 +25,7 @@
                     You will be redirected soon!
                 </h4>
             </div><div class="counter">
-            <p id="counter"></p>
+                <div class="loader"></div>
         </div>
         </div>
         <div class="penguin-container">
